ex1/crud/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-crud-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-crud
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
