ex1/crud/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-crud-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: dwk-crud-svc
              servicePort: 2345
